exports[`Button Snapshots renders basic button correctly 1`] = `
<button
  className="ui button basic"
  onClick={[Function]}
  style={undefined}
  type={undefined} />
`;

exports[`Button Snapshots renders disabled button correctly 1`] = `
<button
  className="ui button disabled"
  onClick={[Function]}
  style={undefined}
  type={undefined} />
`;

exports[`Button Snapshots renders loading button correctly 1`] = `
<button
  className="ui button loading"
  onClick={[Function]}
  style={undefined}
  type={undefined} />
`;

exports[`Button Snapshots renders primary button correctly 1`] = `
<button
  className="ui button primary"
  onClick={[Function]}
  style={undefined}
  type={undefined} />
`;
